--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ p{
 h2{
     font-size: 30px;
     position: relative;
-    top: -15px;
+    top: -5px;
 }
 label{
    margin-top: 5px;
@@ -134,10 +134,17 @@ input{
 
 #closemodal{
     font-size: 40px;
-    position: absolute;
-    right: 395px;
-    top: 270px;
     cursor: pointer;
+    margin-left: 50px;
+}
+
+
+.headermodal{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-right: -100px;
+    margin-bottom: 10px;
 }
 
 .btnregister{
