--- a/responsive.css
+++ b/responsive.css
@@ -1,14 +1,14 @@
 @media(max-width: 770px){
     #opennav{
-        display: inline;
+        display: flex;
         font-size: 45px;
-        position: relative;
-        left: 100px;
     }
-    img{
-        position: relative;
-        left: 180px;
+
+    .navbar{
+        display: flex;
+        justify-content: space-between;
     }
+   
     .nav{
         display: flex;
         right: 1px;
@@ -31,7 +31,6 @@
         display: flex;
         position: fixed;
         top: 1px;
-
         font-size: 45px;
     }
     .nav{
@@ -47,10 +46,47 @@
             transform: translate3d(0, 0, 0);
         }
     }
-}
 
-@media(max-width: 1000px){
-    li,a{
+    .container{
         display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+@media(max-width:500px){
+    .logo{
+        width: 250px;
+    }
+    h4{
+        font-size: 15px;
+    }
+    p{
+        font-size: 10px;
+    }
+    .text{
+        width: 400px;
+        font-size: 17px;
+        text-align: justify;
+    }
+    
+}
+@media(max-width:500px){
+    .text{
+        width: 300px;
+    }
+    img{
+        width: 100px;
+    }
+}
+@media(max-width:410px){
+    .modal-container{
+        width: 300px;
+        height: 400px;
+    }
+    h2{
+        font-size: 20px;
+    }
+    #closemodal{
+        margin-left: 20px;
     }
 }
